# GallopRatings

./: .gitignore  App.tsx  README.md  app.json  babel.config.js  jest.setup.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
__tests__/: filterRatings.test.ts  mockRatingsRepository.test.ts  responsiveLayout.test.ts
docs/: APP_ARCHITECTURE.md  RATINGS.md
ratings/: __init__.py  engine.py  exceptions.py  models.py  serialization.py  service.py  validation.py
ratings_barn_list/: ratings_barn_list_model.dart  ratings_barn_list_widget.dart
ratings_edit/: ratings_edit_model.dart  ratings_edit_widget.dart
ratings_home/: ratings_home_model.dart  ratings_home_widget.dart
ratings_input/: ratings_input_model.dart  ratings_input_widget.dart
ratings_reporting_page/: ratings_reporting_page_model.dart  ratings_reporting_page_widget.dart
ratings_reports/: ratings_reports_model.dart  ratings_reports_widget.dart
src/app/navigation/: AppNavigator.tsx  types.ts
src/app/providers/: AppProviders.tsx
src/components/ui/: Field.tsx  NavCard.tsx  OptionChips.tsx  PrimaryButton.tsx  ScreenContainer.tsx  SectionCard.tsx
src/features/ratings/components/: HorseSummaryCard.tsx  RatingListItem.tsx  StagedReportListItem.tsx
src/features/ratings/constants/: options.ts
src/features/ratings/data/: createDefaultRatingsRepository.ts  mockRatingsRepository.ts  (+3 more)
src/lib/responsive/: useResponsiveLayout.ts
src/lib/supabase/: client.ts
tests/: test_engine.py  test_regression.py  test_serialization.py  test_service.py  test_validation.py
(+9 files in other folders)
