[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gallop-ratings"
version = "0.1.0"
description = "Deterministic, validated ratings engine for head-to-head results."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gallop Ratings" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
